# empath-eq1

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
benchmarks/: judge_rubric.md  seesaw_benchmark.jsonl
clsa/: __init__.py  model.py
clsa/config/: clsa_config.py  transformer_config.py
clsa/decoder/: projection.py
clsa/deliberation/: cross_attention.py  deliberation_loop.py  superposition.py
clsa/evaluation/: benchmark.py  eval_data.py  generation.py  judge_types.py  judge_utils.py  manual_judge.py  objective_probes.py  openai_judge.py  scorers.py  seesaw_test.py  stats.py  you_judge.py
clsa/modules/: cognitive_module.py  transformer.py  weight_loading.py
clsa/training/: checkpointing.py  data.py  losses.py  trainer.py
scripts/: eval.py  train.py  train_baseline.py
services/api/: Dockerfile  cache.py  database.py  main.py  model_client.py  requirements.txt  routes.py  schemas.py
services/model_service/: Dockerfile  inference.py  main.py  requirements.txt  schemas.py
services/web/: Dockerfile  package.json
services/web/fonts/Bitcount_Prop_Double_Ink,Bitcount_Prop_Single_Ink/Bitcount_Prop_Double_Ink/: README.txt
services/web/public/: fonts
services/web/src/app/: layout.tsx  page.tsx
services/web/src/components/: ChatWindow.tsx  DeliberationPanel.tsx  MixingBoard.tsx
services/web/src/lib/: api.ts  useTheme.ts
tests/: test_checkpointing.py  test_phase1_and_specialization.py  test_smoke.py
