[project]
name = "clsa"
version = "0.1.0"
description = "Collaborative Latent Superposition Architecture - Multi-module neural architecture for structured latent-space deliberation"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.2.0",
    "safetensors>=0.4.0",
    "huggingface-hub>=0.20.0",
    "transformers>=4.40.0",
    "datasets>=2.16.0",
    "wandb>=0.16.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.3.0",
]
